--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9688,6 +9688,20 @@ input[type="search"]::-webkit-search-cancel-button {
 	font-weight: bold;
 }
 
+.post_user_avatar {
+	float: left;
+}
+
+.post_user_info {
+	float: left;
+	padding-left: 10px;
+	padding-top: 10px;
+}
+
+.post_subject {
+	clear: both;
+}
+
 .post_depth_0 {}
 
 .post_depth_1 {
