--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9690,6 +9690,22 @@ input[type="search"]::-webkit-search-cancel-button {
  * Forum related classes
  *
  * */
+.x-course,
+.x-module {
+	padding: 5px;
+	border-bottom: 1px solid #dedede;
+}
+
+.x-course-module-status {
+	text-align: right;
+	color: gray;
+	font-size: small;
+}
+/*
+ *
+ * Forum related classes
+ *
+ * */
 .forum-post {
 	margin-bottom: 10px;
 	border: 1px solid #dedede;
@@ -9750,7 +9766,6 @@ input[type="search"]::-webkit-search-cancel-button {
  * Assignment related classes
  *
  * */
-
 .assignment-intro {
 	background-color: white;
 	padding: 5px;
