--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9696,7 +9696,8 @@ input[type="search"]::-webkit-search-cancel-button {
 	border-bottom: 1px solid #dedede;
 }
 
-.x-course-module-status {
+.x-course-module-status,
+.x-module-modname {
 	text-align: right;
 	color: gray;
 	font-size: small;
@@ -9772,3 +9773,4 @@ input[type="search"]::-webkit-search-cancel-button {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+
