Partial support for the Folder resource
The folder resource is supported in navigation.
The files are not downloadable yet. There is a problem
with the window.open() on the android platform still to
be addressed.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9687,17 +9687,19 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /*
  *
- * Forum related classes
+ * User interface; Lists
  *
  * */
 .x-course,
-.x-module {
+.x-module,
+.x-folder-entry {
 	padding: 5px;
 	border-bottom: 1px solid #dedede;
 }
 
 .x-course-module-status,
-.x-module-modname {
+.x-module-modname,
+.x-folder-entry-mime {
 	text-align: right;
 	color: gray;
 	font-size: small;
