Replying to post form was broken; refactoring bug
During the latest refactoring the replying to a post has been
broken. Now it works again. Minor fix in the indentation.

Re-factored the Main controller to allow a partial update of the
local storage.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9809,8 +9809,28 @@ input[type="search"]::-webkit-search-cancel-button {
 	margin-left: 75px;
 }
 
+.x-post-indentation-6 {
+	margin-left: 90px;
+}
+
+.x-post-indentation-7 {
+	margin-left: 105px;
+}
+
+.x-post-indentation-8 {
+	margin-left: 120px;
+}
+
+.x-post-indentation-9 {
+	margin-left: 135px;
+}
+
+.x-post-indentation-10 {
+	margin-left: 150px;
+}
+
 .x-post-attachment-list {
-	padding-top: 10px;
+	padding-top: 165px;
 }
 
 /*
