BUGFIX: Updated modules notification was broken
The update modules notification was broken. The updates were
silent because of how the sencha framework manages instances.
The fundamental problem is that two different instances
of the same Model with the same id are just one object in the
cache. So the first instance is overwritten by the second.
So everytime new updates were asked the localstorage was
overwritten by the updates automatically. This way was impossible
to understand which modules were updated and which not.

In this fix the id for every instance is generated by using the
idproperty: uuid. The id is defined as localid.

Only Course and User model are still using id field and not localid.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9742,6 +9742,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .x-course-module-status,
 .x-module-modname,
+.x-forum-discussion-stat,
 .x-folder-entry-mime {
 	text-align: right;
 	color: gray;
@@ -9755,7 +9756,6 @@ input[type="search"]::-webkit-search-cancel-button {
 
 .x-forum-discussion {
 	padding-top: 15px;
-	padding-bottom: 15px;
 }
 
 .forum-post {
