--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11206,6 +11206,13 @@ input[type="search"]::-webkit-search-cancel-button {
 	background-position-y: 5px;
 }
 
+.x-module-icon-url {
+	background:url('../images/resource.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
 .x-course-module-status,
 .x-module-modname,
 .x-forum-discussion-stat,
