Added support for the activity Choice
Added support for the activity Choice.
Cleared the sass cache.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -186,9 +186,15 @@ $active-color: #C35817;
  * Assignment related classes
  *
  * */
-.assignment-intro {
+.assignment-intro,
+.choice-intro,
+.choice-status {
 	background-color: white;
 	padding: 5px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+}
+
+.choice-status {
+	margin-top: 10px;
 }
