Added SingleUploadAssignment + Refactoring
	- Added SingleUpladAssignment support
	  Uploading files is now possible. Unfortunately the
	  xtype file has a bug that breaks the functioning on
	  the Android platform so instead of the xtype file
	  the simple xtype textfield is used. Once the bug is solved
	  this is going to be fixed.
	- Re-factored the WebService code.
	  Added support for POST and GET requests. This is particularly
	  necessary for file uploading support.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -234,6 +234,7 @@ $active-color: #C35817;
  *
  * */
 .assignment-intro,
+.assignment-previous-submission,
 .choice-intro,
 .choice-status {
 	background-color: white;
@@ -242,6 +243,7 @@ $active-color: #C35817;
 	padding-bottom: 10px;
 }
 
+.assignment-previous-submission,
 .choice-status {
 	margin-top: 10px;
 }
