Upload Assignment Draft Support
The upload of multiple files is ready. Choosing the files is not
ready yet because of a sencha bug affecting the xtype:file
component.

So this is is only a draft. Some checks are still missing
such as the maximum number of files to upload in the assignment.
These checks are going to be implemented after the bug affecting
the xtype:file component is fixed.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -228,19 +228,19 @@ $active-color: #C35817;
 	padding-top: 15px;
 }
 
-/*
- *
- * Assignment related classes
- *
- * */
 .assignment-intro,
 .assignment-previous-submission,
+.assignment-chosen-files-list,
 .choice-intro,
 .choice-status {
 	background-color: white;
 	padding: 5px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+}
+
+.assignment-chosen-files-list div.file-entry {
+	margin-bottom: 5px;
 }
 
 .assignment-previous-submission,
