Integrated the Scorm Reader
Raw integration of the Scorm reader developed by
Nicola Rizzo (http://www.nicolarizzo.com).

The current version points to an internal demo scorm which
for the copyright issues is not pubblished in this commit.
There are still some problems with the ExtractZipFile module.
Not all kind of scorm archives are extracted correctly so that is
why the Scorm reader reads the internal, demo, content.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,14 @@ $active-color: #C35817;
 @include icon('home');
 @include icon('user');
 @include icon('info');
+@import 'scorm_panel';
+
+// scorm reader icons
+@include icon-font('IcoMoon', inline-font-files('icomoon/icomoon.woff', woff, 'icomoon/icomoon.ttf', truetype,'icomoon/icomoon.svg', svg));
+@include icon('bookmark', '\e000', 'icoMoon');
+@include icon('leftarrow', '\e001', 'icoMoon');
+@include icon('rightarrow', '\e002', 'icoMoon');
+@include icon('marker', '\e003', 'icoMoon');
 
 .x-course,
 .x-module,
