metadata list, first implementation (partially works for highlights)

--- a/resources/sass/scorm_panel.scss
+++ b/resources/sass/scorm_panel.scss
@@ -22,6 +22,13 @@
   height:100%;
   width:100%;
 }
+.metaType{
+  position:absolute;
+  right: 10px;
+  bottom:10px;
+  font:10px verdana;
+  color:#666;
+}
 html, body{
   scroll:none;
 }
