font increase / reduction

--- a/resources/css/player_doc.css
+++ b/resources/css/player_doc.css
@@ -1,1 +1,1 @@
-*{-webkit-user-select:auto !important}span.scorm_highlight{color:#000;background:#66ff00}span.scorm_note{color:#000;background:yellow}.scorm_search_result{background:#64ff64}.content{top:0 !important}
+*{-webkit-user-select:auto !important}span.scorm_highlight{color:#000;background:#66ff00}span.scorm_note{color:#000;background:yellow}.scorm_search_result{background:#64ff64}.content{top:0 !important}.on{color:red}#smallerFontBtn .x-button-label{font-size:9px !important;color:red}#biggerFontBtn .x-button-label{font-size:15px !important}
