--- a/resources/sass/player_doc.scss
+++ b/resources/sass/player_doc.scss
@@ -26,3 +26,10 @@ span.scorm_note{
 .on{
   color:red;
 }
+#smallerFontBtn .x-button-label{
+  font-size: 9px !important;
+  color:red;
+}
+#biggerFontBtn .x-button-label{
+  font-size: 15px !important;
+}
