--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -346,89 +346,26 @@ $active-color: #C35817;
 	}
 }
 
-/*
- *
- * Progress bar
- *
- * */
-progress[value] {
-    /* Override the default appearence */
-	  -webkit-appearance: none;
-	     -moz-appearance: none;
-	          appearance: none;
-
-    /* Dimensions */
-    width: 100%;
-    height: 20px;
+.progress-bar {
+	text-align: left;
+	background-color: #333333;
+	height: 25px;
+	width: 100%;
+	margin: 50px 0;			
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
+	box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;	          
 }
 
-/*
- * Webkit browsers only - Progress bar container
- * ---------------------------------------------
- */
-progress[value]::-webkit-progress-bar {
-    background-color: #eee;
-    border-radius: 2px;
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25) inset;
-
-    position: relative;
+.progress-bar span {
+	display: inline-block;
+	background-color: white;
+	height: 100%;	
+	-webkit-border-radius: 3px;
+	border-radius: 3px;
+	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+	box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+    -webkit-transition: width .4s ease-in-out;
+    transition: width .4s ease-in-out;    
 }
-
-/*
- * Webkit browsers only - Progress bar value
- * -----------------------------------------
- */
-progress[value]::-webkit-progress-value {
-    border-radius: 2px;
-    background-size: 35px 20px, 100% 100%, 100% 100%;
-
-    position: relative;
-
-    -webkit-animation: animate-stripes 5s linear infinite;
-            animation: animate-stripes 5s linear infinite;
-}
-
-/*
- * Webkit browsers only - CSS3 keyframe animations
- * -----------------------------------------------
- */
-@-webkit-keyframes animate-stripes { 100% { background-position: -100px 0px; } }
-        @keyframes animate-stripes { 100% { background-position: -100px 0px; } }
-
-/*
- * Webkit browsers only - Pseudo elements
- * --------------------------------------
- */
-progress[value]::-webkit-progress-value:after {
-    content: '';
-    position: absolute;
-
-    width: 6px;
-    height: 6px;
-    right: 7px;
-    top: 7px;
-
-    border-radius: 100%;
-    background-color: rgba(255, 255, 255, 1);
-}
-
-progress[value]::-webkit-progress-value:before {
-    position: absolute;
-    right: 0;
-    top: -125%;
-}
-
-.html5pbar::-webkit-progress-value, .python::-webkit-progress-value {
-    background-image:
-         -webkit-linear-gradient( 135deg,
-                                  transparent,
-                                  transparent 33%,
-                                  rgba(0, 0, 0, .1) 33%,
-                                  rgba(0, 0, 0, .1) 66%,
-                                  transparent 66%),
-         -webkit-linear-gradient( top,
-                                  rgba(255, 255, 255, .25),
-                                  rgba(0, 0, 0, .2)),
-         -webkit-linear-gradient( left, #09c, #f44);
-}
-
