--- a/resources/sass/player_doc.scss
+++ b/resources/sass/player_doc.scss
@@ -3,6 +3,9 @@ html, body {
   //-webkit-transform-origin: 0 0;
   //-webkit-transform: scale(1.1);
 }
+//table{
+//  border:3px solid red !important;
+//}
 * {
   -webkit-user-select:auto !important;
 }
