Extract course section labels info from the server
This commit bring the support for the course sections.
Now all the course sections info is extracted from the server.
The sections can have the mixed title now depending on the
section label settings on the platform.

The new order in the ModulesList reflects the one on the platform.
The modules are not grouped by the type anymore.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,11 +56,16 @@ $active-color: #C35817;
 	border-bottom: 1px solid #dedede;
 }
 
-.x-module-section {
+.x-course-section {
 	background-color: white;
 	padding-top: 10px;
 	padding-left: 3px;
 	border-bottom: 2px solid #dedede;
+	.summary {
+		margin-top: 10px;
+		margin-bottom: 5px;
+		font-size: small;
+	}
 }
 
 .x-module,
