--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@ $active-color: #C35817;
 
 // scorm reader icons
 @include icon-font('IcoMoon', inline-font-files('icomoon/icomoon.woff', woff, 'icomoon/icomoon.ttf', truetype,'icomoon/icomoon.svg', svg));
+@include icon('bullhorn', '\e600', 'icoMoon');
 @include icon('bookmark', '\e000', 'icoMoon');
 @include icon('leftarrow', '\e001', 'icoMoon');
 @include icon('rightarrow', '\e002', 'icoMoon');
@@ -47,6 +48,7 @@ $active-color: #C35817;
 }
 
 .x-course,
+.x-recent-activity,
 .x-calendar-event,
 .x-module,
 .x-grade,
@@ -66,6 +68,15 @@ $active-color: #C35817;
 		margin-bottom: 5px;
 		font-size: small;
 	}
+}
+
+.x-recent-activity-label {
+	background-color: $base-color;
+	color: white;
+	padding-top: 10px;
+	padding-bottom: 3px;
+	padding-left: 3px;
+	border-bottom: 2px solid #dedede;
 }
 
 .x-module,
