Bugfix: Assignment and Assign file upload fix
- Switched entirely to the xtype:filefield in the Assign and
  Assignment views and controllers.
- Refactored the uploading mechanism in the Assign and
  Assignment controller.
- Display the filename in the file slots. Android bug.
- add_cordova_plugins script: freeze for the cordova plugins.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -373,6 +373,13 @@ $active-color: #C35817;
 	margin-top: 10px;
 }
 
+.filefield-file-name {
+	padding-left: 10px;
+	font-weight: bold;
+	color: gray;
+	font-style: italic;
+}
+
 /*
  *
  * Assign and Assignment related classes
