Display the forum intro above the discussions list

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -249,6 +249,7 @@ $active-color: #C35817;
 	padding-top: 15px;
 }
 
+.forum-intro,
 .forum-post {
 	margin-bottom: 10px;
 	border: 1px solid #dedede;
