--- a/extensions/supsi/template/ScormPanelTemplate.html
+++ b/extensions/supsi/template/ScormPanelTemplate.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="compendio/template/Styles/annotator.compendio.css" type="text/css" />
     <link rel="stylesheet" href="compendio/template/Styles/div_mode.css" type="text/css" />
     <link rel="stylesheet" href="compendio/template/Styles/link_coords.css" type="text/css" />
- -->    <link rel="stylesheet" href="resources/css/jquery.fancybox-1.3.4.css" type="text/css" />
-    <link rel="stylesheet" href="resources/css/player_doc.css" type="text/css" />
+ -->    <link rel="stylesheet" href="../../../resources/css/jquery.fancybox-1.3.4.css" type="text/css" />
+    <link rel="stylesheet" href="../../../resources/css/player_doc.css" type="text/css" />
 </head>
 <body>
     <div class='scorm_data'>
@@ -18,10 +18,10 @@
             <div class='contenttopic'></div>
         </div>
     </div>
-<script src='js/require.js'></script>
-<script src='js/iframe.js'></script>
-<script src='js/jquery/jquery-1.10.2.min.js'></script>
-<script src='js/jquery/jquery-migrate-1.2.1.min.js'></script>
-<script src='js/jquery/jquery.fancybox-1.3.4.js'></script>
+<script src='../../../js/require.js'></script>
+<script src='../../../js/iframe.js'></script>
+<script src='../../../js/jquery/jquery-1.10.2.min.js'></script>
+<script src='../../../js/jquery/jquery-migrate-1.2.1.min.js'></script>
+<script src='../../../js/jquery/jquery.fancybox-1.3.4.js'></script>
 </body>
 </html>
