--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -374,7 +374,8 @@ $active-color: #C35817;
 	margin-top: 10px;
 }
 
-.filefield-file-name {
+.fileslot-filename {
+	padding-top: 15px;
 	padding-left: 10px;
 	font-weight: bold;
 	color: gray;
