Draft: Initial support for the Quiz activity
This commit adds an initial support for the Quiz activity.
The activity is opened inside an InAppBrowser window.
Once the quiz page is loaded the page is stripped from all the
unnecessary blocks leaving only the quiz content.
So far it seems working.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -164,6 +164,13 @@ $border-color: #dedede;
 	background-position-y: 5px;
 }
 
+.x-module-icon-quiz {
+	background:url('../images/quiz.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
 .x-module-icon-scorm {
 	background:url('../images/scorm.png');
 	background-repeat: no-repeat;
