--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -185,6 +185,41 @@ $border-color: #dedede;
 	background-position-y: 5px;
 }
 
+.x-module-icon-workshop {
+	background:url('../images/workshop.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
+.x-module-icon-data {
+	background:url('../images/database.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
+.x-module-icon-glossary {
+	background:url('../images/glossary.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
+.x-module-icon-wiki {
+	background:url('../images/wiki.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
+.x-module-icon-feedback {
+	background:url('../images/feedback.png');
+	background-repeat: no-repeat;
+	background-position-x: 0px;
+	background-position-y: 5px;
+}
+
 .x-module-icon-url {
 	background:url('../images/url.png');
 	background-repeat: no-repeat;
