Contact participants networks: phone, sms & skype
Initial android support for contacting participants through
phone, sms and skype networks. e-Mail network is still available.
Picking the network is prompted when e-Mail is not the only choice.
The common case is when a single participant is selected although
it works with more than one participant provided the selected ones
have more than one network in common.

Renamed the Main controller to Updater which is more appropriate
because of what it actually does.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -276,6 +276,10 @@ $border-color: #dedede;
 	margin-bottom: 7px;
 }
 
+.x-partecipant-networks {
+	height: 16px;
+}
+
 .partecipant-selected {
 	background-color: white;
 }
@@ -542,5 +546,40 @@ $border-color: #dedede;
 		-moz-transition: width 0.5s, left 0.5s;
 		-o-transition: width 0.5s, left 0.5s;
 		transition: width 0.5s, left 0.5s;
+	}
+}
+
+/*
+ *
+ * Network Picker related classes
+ *
+ * */
+.networkpicker {
+	.skype {
+		margin: 10px;
+		background:url('../images/skype_picker.png');
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+
+	.phone {
+		margin: 10px;
+		background:url('../images/phone_picker.png');
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+
+	.sms {
+		margin: 10px;
+		background:url('../images/sms_picker.png');
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+
+	.email {
+		margin: 10px;
+		background:url('../images/email_picker.png');
+		background-position: center;
+		background-repeat: no-repeat;
 	}
 }
