Added dates to the forum posts

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -322,6 +322,12 @@ $border-color: #dedede;
 
 .x-post-lastname {}
 
+.x-post-date {
+	color: gray;
+	font-size: small;
+	padding-left: 5px;
+}
+
 .x-post-subject {
 	font-weight: bold;
 	padding-top: 10px;
